--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
+    "firebase": "^10.5.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
