--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.5.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
